# config-codex

./: .env.example  README.md  manage.py  pyproject.toml
apps/game/: __init__.py  models.py
apps/game/domain/: __init__.py
apps/game/domain/models/: Game.py  __init__.py
apps/identity/: __init__.py  admin.py  apps.py  models.py
apps/identity/api/: __init__.py  auth.py  auth_endpoints.py  schemas.py
apps/identity/domain/: __init__.py  user_events.py
apps/identity/domain/models/: __init__.py  user.py
apps/identity/domain/services/: __init__.py  auth_service.py
apps/identity/migrations/: 0001_initial.py
apps/identity/tests/: __init__.py  test_api_endpoints.py  test_auth_service.py
core/: __init__.py  asgi.py  main_api.py  urls.py  wsgi.py
core/settings/: __init__.py  __init__.pyi  base.py  development.py  production.py  testing.py
game_config_hub_service/: asgi.py  settings.py  urls.py  wsgi.py
